<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".business.store.ui.StoreListActivity">

    <LinearLayout
        android:id="@+id/store_info_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/shop_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="jfeiofje" />

        <TextView
            android:id="@+id/open_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/shop_rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/store_items_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/store_info_ll" />

    <LinearLayout
        android:id="@+id/bottom_content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <CheckBox
            android:id="@+id/select_all_cb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/opnlangSelectAll" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/opnlangOrderNow"
            android:textColor="@color/theme" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_item_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opnlangNoItems"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_info_ll"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/refresh_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opnlangTryAgain"
        android:textAlignment="center"
        android:textColor="@color/theme"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/no_item_tv"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>